tests/baselines/reference/parserObjectCreationArrayLiteral4.errors.txt
parserObjectCreationArrayLiteral4.ts(1,5): error TS2304: Cannot find name 'Foo'.


==== parserObjectCreationArrayLiteral4.ts (1 errors) ====
    new Foo[1]();
        ~~~
!!! error TS2304: Cannot find name 'Foo'.